# lookout

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: smoke.rs
src/: card.rs  error.rs  imagepaths.rs  lib.rs  logging.rs  main.rs  runtime.rs  state.rs
src/cli/: mod.rs  view.rs
src/mcp/: events.rs  mod.rs  server.rs  tools.rs
src/tui/: app.rs  feed.rs  filter.rs  header.rs  mod.rs  pins.rs
src/tui/render/: chart.rs  diff.rs  image.rs  log.rs  mod.rs  progress.rs  question.rs  status.rs  table.rs  text.rs  tree.rs
tests/: backpressure.rs  mcp_control_tools.rs  mcp_show_chart.rs  mcp_show_diff.rs  mcp_show_image.rs  mcp_show_log.rs  mcp_show_progress.rs  mcp_show_question.rs  mcp_show_status.rs  mcp_show_table.rs  mcp_show_text.rs  mcp_show_tree.rs  state_task.rs
tests/common/: mod.rs
tools/claude-priming-hook/: README.md  SKILL.md  lookout-prime.sh  settings.fragment.json  test-hook.sh
